add realtime balance